[NEW]: inspect cloud run services and revisions

--- a/.environment
+++ b/.environment
@@ -52,6 +52,6 @@ export DAGU_HOST=${DAGU_HTTP_HOST}
 export DAGU_PORT=${DAGU_HTTP_PORT}
 export _WORK_DIR="${DAGU_TMP_DIR}/work_dir"
 export DAGU_WORK_DIR=${_WORK_DIR}
-export DAGU_NAVBAR_TITLE="GCP"
+export DAGU_NAVBAR_TITLE="GCP INSPECT"
 
 export PATH=${BIN_DIR}:${PATH}
